[package]
name = "samba"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Samba — typed rate-limited consumer primitive for pleme-io. Provides UpstreamApi trait, LeakyBucket pacing, and JetStreamPullWorker that compose into rate-limited workers in ~30 LOC of binary code."
homepage = "https://github.com/pleme-io/samba"
repository = "https://github.com/pleme-io/samba"
license = "MIT"
categories = ["network-programming", "asynchronous"]
keywords = ["rate-limit", "throttle", "nats", "jetstream", "leaky-bucket"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
async-nats = "0.38"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
http-body-util = "0.1"
rand = "0.9"
futures = "0.3"
bytes = "1"

[dev-dependencies]
assert_matches = "1"
pretty_assertions = "1"
proptest = "1"
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
